--- a/login.html
+++ b/login.html
@@ -1,26 +1,36 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-
-    <title>Sign Up</title>
-  </head>
-  <body>
+    <head>
+        <title>
+            Sign In
+        </title>
+    </head>
+<body>
 
     <div id = "navbar"></div>
-    <h1>You can Sign In my friend!!</h1>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
+<form onsubmit="return loginFunction();">
+  <div class="container" style="align-content: center; padding: 10% 30%;">
+    <div  style="justify-content: center; display: flex;">
+     <h2>Sign In</h2>
+    </div>
+    <label for="EmailInput" style="padding-top: 5%">Email address</label>
+    <input type="email" class="form-control" id="emailInput" placeholder="Enter email" required />
+    <label for="PasswordInput" style="padding-top: 5%">Password</label>
+    <input type="password" class="form-control" id="passwordInput" placeholder="Password" required />
+    <label id="myLabel" style="justify-content: center; display: flex; padding-top: 5%; color: blue;"></label>
+    <div class="SubmitTag" style="justify-content: center; display: flex; padding-top: 5%">
+    <button type="submit" class="btn btn-primary">Sign In</button>
+    </div>
+  </div>
+</form>
+
+
+
+
+
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src ="js/script.js"></script>
-  </body>
-</html>
+    <script src ="js/validation.js"></script>
+
+
+</body>
