--- a/signup.html
+++ b/signup.html
@@ -8,8 +8,119 @@
     <body>
 
     <div id = "navbar"></div>
+    <div  style="justify-content: center; display: flex; padding: 1%;">
+        <h2>Sign Up</h2>
+    </div>
+       <form class="container" style="padding-top: 1%">
 
-    <h1>Come On!! Hurry and sign up!</h1>
+         <div class="form-row">
+            <div class="form-group col-md-5">
+              <label for="firstNameInput">First Name</label>
+              <input type="text" class="form-control" id="firstNameInput" placeholder="First Name">
+            </div>
+            <div class="form-group col-md-5">
+              <label for="lastNameInput">Last Name</label>
+              <input type="text" class="form-control" id="lastNameInput" placeholder="Last Name">
+            </div>
+            <div class="form-group col-md-2">
+                <label for="suffixInput">Suffix</label>
+                <select id="suffixInput" class="form-control">
+                <option selected>Choose...</option>
+                <option>Jr</option>
+                <option>Sr.</option>
+              </select>
+
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-group col-md-4">
+              <label for="emailInput">Email</label>
+              <input type="email" class="form-control" id="emailInput" placeholder="Email">
+            </div>
+            <div class="form-group col-md-4">
+              <label for="passwordInput">Password</label>
+              <input type="password" class="form-control" id="passwordInput" placeholder="Password">
+            </div>
+            <div class="form-group col-md-4">
+              <label for="confirmPasswordInput">Confirm Password</label>
+              <input type="password" class="form-control" id="confirmPasswordInput" placeholder="Confirm Password">
+            </div>
+          </div>
+
+
+
+
+          <div class="form-row" style="padding-bottom: 2%">
+            <legend class="col-form-label">Gender</legend>
+                <div class="form-check" style="padding-left: 2.5%">
+                  <input class="form-check-input" type="radio" name="gridRadio" id="gridRadio1" value="option1">
+                  <label class="form-check-label" for="gridRadio1">
+                    Male
+                  </label>
+                </div>
+                <div class="form-check" style="padding-left: 3%">
+                  <input class="form-check-input" type="radio" name="gridRadio" id="gridRadio2" value="option2">
+                  <label class="form-check-label" for="gridRadio2">
+                    Female
+                  </label>
+                </div>
+                <div class="form-check" style="padding-left: 3%">
+                  <input class="form-check-input" type="radio" name="gridRadio" id="gridRadio3" value="option3">
+                  <label class="form-check-label" for="gridRadio3">
+                    Other
+                  </label>
+                </div>
+                <div class="form-check" style="padding-left: 3%">
+                  <input class="form-check-input" type="radio" name="gridRadio" id="gridRadio4" value="option4" checked>
+                  <label class="form-check-label" for="gridRadio4">
+                    Opt Not to say
+                  </label>
+                </div>
+          </div>
+
+          <div class="form-group">
+            <label for="addressInput">Address</label>
+            <input type="text" class="form-control" id="addressInput" placeholder="1234 Main St">
+          </div>
+          <div class="form-group">
+            <label for="addressInput2">Address 2</label>
+            <input type="text" class="form-control" id="addressInput2" placeholder="Apartment, studio, or floor">
+          </div>
+          <div class="form-row">
+            <div class="form-group col-md-6">
+              <label for="cityInput">City</label>
+              <input type="text" class="form-control" id="cityInput">
+            </div>
+            <div class="form-group col-md-4">
+              <label for="stateInput">State</label>
+              <select id="stateInput" class="form-control">
+                <option selected>Choose...</option>
+                <option>CA</option>
+                <option>NY</option>
+                <option>OR</option>
+                <option>TX</option>
+                <option>WA</option>
+              </select>
+            </div>
+            <div class="form-group col-md-2">
+              <label for="inputZip">Zip</label>
+              <input type="text" class="form-control" id="zipInput">
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox" id="gridCheck">
+              <label class="form-check-label" for="gridCheck">
+                Agree Terms and Conditions!
+              </label>
+            </div>
+          </div>
+          <div  style="justify-content: center; display: flex; padding-top: 2%">
+          <button type="submit" class="btn btn-primary">Sign Up</button>
+          </div>
+
+    </form>
+
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src ="js/script.js"></script>
