my first completed commit

--- a/forgetpassword.html
+++ b/forgetpassword.html
@@ -1,5 +1,4 @@
 
-
     <head>
         <title>
            Forget Password
@@ -9,9 +8,22 @@
     <body>
     <div id = "navbar"></div>
 
-    <h1>You forgot your password??</h1>
+<form onsubmit="return fPassFunction();">
+  <div class="container" style="align-content: center; padding: 10% 30%;">
+    <div  style="justify-content: center; display: flex;">
+     <h2>Password Recovery Portal</h2>
+    </div>
+    <label for="recoveryEmailInput" style="padding-top: 5%">Enter Recovery Email</label>
+    <input type="email" class="form-control" id="recoveryEmailInput" placeholder="Recovery Email" required />
+    <label id="myfPassLabel" style="justify-content: center; display: flex; padding-top: 5%; color: blue;"></label>
+    <div class="SubmitTag" style="justify-content: center; display: flex; padding-top: 5%">
+    <button type="submit" class="btn btn-primary">Reset</button>
+    </div>
+  </div>
+</form>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src ="js/script.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script src ="js/script.js"></script>
+<script src ="js/validation.js"></script>
 
     </body>
