--- a/signup.html
+++ b/signup.html
@@ -11,7 +11,7 @@
     <div  style="justify-content: center; display: flex; padding: 1%;">
         <h2>Sign Up</h2>
     </div>
-       <form class="container" style="padding-top: 1%">
+       <form class="container" style="padding-top: 1%" onsubmit="return signup();">
 
          <div class="form-row">
             <div class="form-group col-md-5">
@@ -68,7 +68,7 @@
             </div>
             <div class="form-group col-md-8">
               <label for="phoneInput">Phone Number (10 Digits Only)</label>
-              <input type="tel" class="form-control" id="phoneNumberInput" placeholder="(XXX)-XXX-XXXX" pattern="^\d{3}\d{3}\d{4}$" required>
+              <input type="tel" class="form-control" id="phoneNumberInput" placeholder="(XXX)-XXX-XXXX" pattern="^\d{10}$" required>
             </div>
           </div>
 
@@ -98,7 +98,7 @@
             </div>
             <div class="form-group col-md-2">
               <label for="inputZip">Zip</label>
-              <input type="text" class="form-control" id="zipInput" oninvalid="zipCheck(this);" oninput="zipCheck(this);" placeholder="XXXXX" required>
+              <input type="text" class="form-control" id="zipInput" pattern="^\d{5}$" placeholder="XXXXX" required>
             </div>
           </div>
 
