--- a/navbar.html
+++ b/navbar.html
@@ -10,12 +10,12 @@
   </head>
   <body>
 
-<div id="navbar" >
-<nav class="navbar navbar-expand-sm navbar-dark bg-primary" style="color:white;">
+<div id="navbar" style="padding-bottom: 2%">
+<nav class="navbar navbar-expand-md navbar-dark bg-primary" style="color:white;">
 
 <a class="navbar-brand">
     <img src="/images/readerFace.png" alt="icon" width="30" height="30" class="d-inline-block align-top">
-    <strong>Navbar</strong>
+    <strong>My First Bootstrap Project</strong>
 </a>
 <button class = "navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleItems" aria-controls="navbarToggleItems" aria-expanded="false">
     <span class="navbar-toggler-icon"></span>
