--- a/signup.html
+++ b/signup.html
@@ -1,4 +1,5 @@
-
+<!doctype html>
+<html lang="en">
     <head>
         <title>
             Sign Up
@@ -97,7 +98,7 @@
               </select>
             </div>
             <div class="form-group col-md-2">
-              <label for="inputZip">Zip</label>
+              <label for="inputZip">Zip (5 Digits)</label>
               <input type="text" class="form-control" id="zipInput" pattern="^\d{5}$" placeholder="XXXXX" required>
             </div>
           </div>
